; ModuleID = '/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-parser.c_tl_token_skip_namespace.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-parser.c_tl_token_skip_namespace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tl_token = type { i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.tl_token*)* @tl_token_skip_namespace to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @tl_token_skip_namespace(%struct.tl_token* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.tl_token*, align 8
  %4 = alloca i8*, align 8
  store %struct.tl_token* %0, %struct.tl_token** %3, align 8
  %5 = load %struct.tl_token*, %struct.tl_token** %3, align 8
  %6 = getelementptr inbounds %struct.tl_token, %struct.tl_token* %5, i32 0, i32 0
  %7 = load i8*, i8** %6, align 8
  %8 = call i8* @strchr(i8* %7, i8 signext 46)
  store i8* %8, i8** %4, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = icmp eq i8* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %1
  %12 = load %struct.tl_token*, %struct.tl_token** %3, align 8
  %13 = getelementptr inbounds %struct.tl_token, %struct.tl_token* %12, i32 0, i32 0
  %14 = load i8*, i8** %13, align 8
  store i8* %14, i8** %2, align 8
  br label %17

15:                                               ; preds = %1
  %16 = load i8*, i8** %4, align 8
  store i8* %16, i8** %2, align 8
  br label %17

17:                                               ; preds = %15, %11
  %18 = load i8*, i8** %2, align 8
  ret i8* %18
}

declare dso_local i8* @strchr(i8*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
